<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_login_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_login_logo"
        android:src="@drawable/askoutlogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/activity_login_userEmail"
        android:layout_gravity="left|start"/>


    <EditText
        android:id="@+id/activity_login_userEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:textSize="18sp"
        android:padding="14dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@mipmap/ic_email_outline_15"
        android:drawableStart="@mipmap/ic_email_outline_15"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/activity_login_userPassword"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:textSize="18sp"
        android:padding="14dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/ic_lock_outline"
        android:drawableStart="@mipmap/ic_lock_outline"
        android:layout_below="@+id/activity_login_userEmail"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/activity_login_loginButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/activity_login_userPassword"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/activity_login_registerButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/no_account_sign_up"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:layout_below="@id/activity_login_loginButton"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/activity_login_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/activity_login_registerButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="setResetPassword"/>

    <View
        android:id="@+id/underlineView"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_alignEnd="@+id/activity_login_resetPassword"
        android:layout_alignLeft="@+id/activity_login_resetPassword"
        android:layout_alignRight="@+id/activity_login_resetPassword"
        android:layout_alignStart="@+id/activity_login_resetPassword"
        android:layout_below="@+id/activity_login_resetPassword"
        android:layout_marginTop="3dp"
        android:background="@android:color/background_light"/>
</RelativeLayout>
